--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
-    "bull": "^4.12.0",
+    "bullmq": "^5.63.2",
     "cloudinary": "^2.8.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
