--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "bullmq": "^5.63.2",
     "cloudinary": "^2.8.0",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
     "dotenv": "^16.3.1",
