F44466665444ix44 in emailQueue444445544256644554445555444455555555555665666666656666655665665665562

--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "resend": "^3.0.0"
   },
   "devDependencies": {
