--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.71.2",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "bullmq": "^5.63.2",
